--- a/projet2-Pokedex/projet-Pokedex/src/index.css
+++ b/projet2-Pokedex/projet-Pokedex/src/index.css
@@ -1,12 +1,13 @@
 @import "tailwindcss";
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,9 +15,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.moise{
+.moise {
   size: 50px;
-  color:aqua;
+  color: aqua;
 }
 
 body {
@@ -34,9 +35,11 @@ body {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
